Update Siedebar and CV Cards

--- a/packages/web/src/locales/en.json
+++ b/packages/web/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "sidebar": {
     "cabs": "Cabs",
+    "cvs": "CV Programmer",
     "maintenance": "Maintenance",
     "sensors": "Sensors",
     "start": "Start",
