Fix sidebar with lg buttons

--- a/packages/web/src/locales/en.json
+++ b/packages/web/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "sidebar": {
     "cabs": "Cabs",
-    "cvs": "CV Programmer",
+    "cvs": "CV Analyser",
     "maintenance": "Maintenance",
     "sensors": "Sensors",
     "start": "Start",
